2009-01-19  Ray Strode  <rstrode@redhat.com>

	* gnome-bg.c (gnome_bg_set_pixmap_as_root_with_crossfade), (gnome_bg_get_pixmap_from_root): Add functions to let g-s-d crossfade bg.

2009-01-19  Ray Strode  <rstrode@redhat.com>

	* gnome-bg.c (gnome_bg_set_pixmap_as_root): Add docstring for gnome_bg_set_pixmap_as_root

2009-01-19  Ray Strode  <rstrode@redhat.com>

	Add Crossfade class

	* gnome-bg-crossfade.[ch]: New files
	to manage a cross fade animation (not used yet).

2009-01-19  Ray Strode  <rstrode@redhat.com>

	Move part of set_pixmap_as_root to set_root_pixmap_id

	* gnome-bg.c (set_pixmap_as_root),
	(set_root_pixmap_id): The meatiest part of
	set_pixmap_as_root takes the passed
	in pixmap and stores it on the root window in the
	ESETROOT_PMAP_ID and _XROOTPMAP_ID properties.  That
	functionality stands on its own, and should be factored
	out so it can get reused later when adding crossfade
	transitions on background changes.


2009-01-19  Ray Strode  <rstrode@redhat.com>

	* gnome-bg.c (gnome_bg_set_pixmap_as_root): Use gdk
	functions to grab server and flush client.

2009-01-19  Ray Strode  <rstrode@redhat.com>

	Emit "transitioned" not "changed" for new frames

	* gnome-bg.c (do_transitioned), (queue_transitioned),
	(gnome_bg_class_init), (on_timeout): When changing
	slideshow frames emit a different signal than when
	changing whole backgrounds, so the two cases can be
	detected.

2009-01-19  Vincent Untz  <vuntz@gnome.org>

	* gnome-rr.c: (fill_out_screen_info): if xrandr 1.3 is available, use
	XRRGetScreenResourcesCurrent instead of XRRGetScreenResources since
	it's cheaper.
	Patch by Alberto Milone <albertomilone@alice.it>
	Fix bug #568160

2009-01-07  Vincent Untz  <vuntz@gnome.org>

	* gnome-bg.c: (gnome_bg_set_color): use gdk_color_equal() instead of
	custom colors_equal()
	Fix bug #566900

==================== 2.25.4 ====================

==================== 2.25.3 ====================

2008-12-12  Vincent Untz  <vuntz@gnome.org>
